<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP110_AUTOSEQUENCE" Id="{37111f2a-77ab-4e32-9ad7-717a780c1ae0}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP110_AUTOSEQUENCE
VAR	
//BOOL
	OP110_STN_ERR					: BOOL;
	OP110_LH_A_OIL_Dispense			: BOOL;
	OP110_RH_A_OIL_Dispense			: BOOL;
	OP110_RH_A_OIL_SPIN 				: BOOL;
	OP110_LH_A_OIL_SPIN				: BOOL;
	OP110_LH_OIL_DONE				: BOOL;
	OP110_RH_OIL_DONE				: BOOL;
	
//TON
	OP110_AFT_SFE_WRK				: TON;
	OP110_AFT_SPN_STRT				: TON;
	OP110_AFT_OIL_STRT				: TON;
	OP110_AFT_SPN_OFF				: TON;

	
	check: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
// AUTO MODE
IF (NOT OP110_AutoSelected OR  OP110_ErrorActive OR OP110_HomeRunning ) THEN
	OP110_GVL.OP110_AutoRunning:= FALSE;
	OP110_AutoSeq:= 10;
END_IF	
																									
CASE OP110_AutoSeq OF
		
		10: IF (OP110_AutoSelected) THEN		// Check Automode Selected
				OP110_AutoSeq:=20;
	        END_IF
		
	    20:IF ( NOT OP110_ErrorActive) THEN		//Check No error
		       OP110_AutoSeq:=30;
      	   END_IF
		   
      	30:IF (NOT OP110_HomeRunning) THEN		//Check No Homerunning
      		   OP110_AutoSeq :=40;
      	   END_IF
		   
        40:IF (OP110_Main.OP110_Modeselection_FB.TempHomeOK)THEN	//Check Machine in Home
      		   OP110_AutoSeq:= 50;
      	   END_IF
		   
      	50:IF ( NOT OP110_OperationCompleted) THEN		// Check Operation Completed Reset
      		   OP110_AutoSeq:=60;
      	   END_IF
		   
      	70:  // SERVO POSITION SAFE CHECK
	       IF (OP110_GVL.OP110_SERVO_ON_SFE_WRK OR OP110_GVL.OP110_SERVO_ON_HOME)AND OP110_GVL.OP110_SERVO_POS_DONE AND NOT SR110_Vert_servo_ctrl.ABSmove_Start THEN 
	        SR110_Vert_servo.fTargetPosition:=OP110_GVL.OP110_VERT_SERVO_WRK_POS;
			IF SR110_Vert_servo.fTargetPosition=OP110_GVL.OP110_VERT_SERVO_WRK_POS THEN
 				OP110_AutoSeq:=75;
			END_IF	
	       END_IF
		   
	   60:IF  (OP110_GVL.Automatic_Run OR (NOT OP110_GVL.Automatic_Run AND OP110_HMI_Cycle_Start )) THEN		//Machine Start in Fully Automatic or Press Cycle Start For Semi Automatic
		    OP110_GVL.OP110_HomeConditionOK:=TRUE;
	 			IF( OP110_Main.OP110_Modeselection_FB.HomeConditionOK AND OP110_AutoSelected) THEN
					OP110_GVL.OP110_AutoRunning:=TRUE;
					OP110_GVL.OP110_StepRunning:= FALSE;
				
				ELSIF (OP110_Main.OP110_Modeselection_FB.HomeConditionOK AND OP110_StepSelected) THEN
					OP110_GVL.OP110_AutoRunning:=FALSE;
					OP110_GVL.OP110_StepRunning:= TRUE;
				END_IF;
		  END_IF
		   IF ((OP110_GVL.OP110_AutoRunning OR OP110_GVL.OP110_StepRunning) AND OP110_GVL.OP110_StartEnable) THEN
				OP110_AutoSeq:= 70;
		   END_IF	
		   
		75: // WAITING FOR MOVER AND MOVING SERVO TO TARGET POSITION
			IF OP110_GVL.OP110_STN_ENABLE THEN
			 SR110_Vert_servo_ctrl.ABSmove_Start:=TRUE;
			 OP110_AutoSeq:=80;
			END_IF
			
		80: // START THE SPINNER OK COMPONENT FIXTURE
			IF OP110_GVL.OP110_SERVO_POS_DONE AND OP110_GVL.OP110_SERVO_ON_WRK THEN
			 SR110_Vert_servo_ctrl.ABSmove_Start:=FALSE;	
			END_IF
			IF OP110_AFT_SFE_WRK.Q THEN			 
			 IF OP110_FIXTURE_1=9999 THEN
			  OP110_LH_A_OIL_SPIN:=TRUE;
			 END_IF
			 IF OP110_FIXTURE_2=9999 THEN
			  OP110_RH_A_OIL_SPIN:=TRUE;
			 END_IF
			 OP110_AutoSeq:=100;
		 	END_IF
		  
		100: //START THE OILLING UNIT 
		    IF OP110_AFT_SPN_STRT.Q THEN
			 OP110_LH_A_OIL_Dispense:=OP110_LH_A_OIL_SPIN;
			 OP110_LH_OIL_DONE:=OP110_LH_A_OIL_SPIN;
			 OP110_GVL.OP110_LH_OIL_NOK:=TRUE;
			 OP110_RH_A_OIL_Dispense:=OP110_RH_A_OIL_SPIN;
			 OP110_RH_OIL_DONE:=OP110_RH_A_OIL_SPIN;
			 OP110_GVL.OP110_RH_OIL_NOK:=TRUE;
			 OP110_AutoSeq:=120;			
		    END_IF
				
		120: //OFF THE SPINNER AND OILLING
			 IF OP110_AFT_OIL_STRT.Q THEN
		  	   IF OP110_LH_OIL_DONE THEN
			    OP110_LH_A_OIL_Dispense:=FALSE;		
			    OP110_GVL.OP110_LH_OIL_OK:=TRUE;
				OP110_GVL.OP110_LH_OIL_NOK:=FALSE;
			   END_IF
			   IF OP110_RH_OIL_DONE THEN
			    OP110_RH_A_OIL_Dispense:=FALSE;
			    OP110_GVL.OP110_RH_OIL_OK:=TRUE; 
				OP110_GVL.OP110_RH_OIL_NOK:=FALSE;
			   END_IF	
			   IF NOT SR110_Vert_servo_ctrl.ABSmove_Start THEN
				   SR110_Vert_servo.fTargetPosition:=OP110_GVL.OP110_VERT_SERVO_SFE_WRK_POS;
			   		OP110_AutoSeq:=140;	
			   END_IF
			   		
			 END_IF
			
		140: // SERVO MOVE TO SAFE WORK POSITION 
			IF OP110_AFT_SPN_OFF.Q THEN
			  OP110_RH_A_OIL_SPIN:=FALSE;
			  OP110_LH_A_OIL_SPIN:=FALSE;
			  SR110_Vert_servo_ctrl.ABSmove_Start:=TRUE;			  
	     	  OP110_AutoSeq:=160;	  
			END_IF
			
		160: // SERVO DONE AND RESET THE DONE BITS
			IF  OP110_GVL.OP110_SERVO_POS_DONE AND OP110_GVL.OP110_SERVO_ON_SFE_WRK THEN
			 SR110_Vert_servo_ctrl.ABSmove_Start:=FALSE;
			 OP110_GVL.OP110_RH_OIL_OK:=FALSE;
			 OP110_GVL.OP110_LH_OIL_OK:=FALSE;
			 OP110_AutoSeq:=70;
			 OP110_GVL.OP110_STN_ENABLE:=False;				
			END_IF

END_CASE	
//Timers
OP110_AFT_SFE_WRK(IN:=OP110_GVL.OP110_SERVO_ON_WRK AND (OP110_AutoSeq=80), PT:=INT_TO_TIME(OP110_GVL.OP110_DLY_AFT_SFE_WRK) , Q=> , ET=> );
OP110_AFT_SPN_STRT(IN:=(OP110_AutoSeq=100), PT:=INT_TO_TIME(OP110_GVL.OP110_DLY_AFT_SPN_STRT) , Q=> , ET=> );
OP110_AFT_OIL_STRT(IN:=(OP110_AutoSeq=120), PT:=INT_TO_TIME(OP110_GVL.OP110_DLY_AFT_OILNG_STRT) , Q=> , ET=> );
OP110_AFT_SPN_OFF(IN:=(OP110_AutoSeq=140), PT:=T#100ms , Q=> , ET=> );
//INT_TO_TIME(OP110_GVL.OP110_DLY_AFT_OILNG_FNISH)
//temp(IN:=OP110_AutoSeq=140,PT:=T#100MS);


]]></ST>
    </Implementation>
    <LineIds Name="OP110_AUTOSEQUENCE">
      <LineId Id="3" Count="128" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>